# invideo-audio-gen

./: .gitignore  README.md  audio_gen.py  speaker_configs.json  transcript.txt  transcript_01.txt
backend/: pyproject.toml  requirements.txt  run.py  setup.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/api/routes/: __init__.py  audio.py  config.py  transcript.py  websocket.py
backend/app/core/: __init__.py  config.py  models.py
backend/app/services/: __init__.py  websocket_manager.py
backend/app/services/audio_generator/: __init__.py  audio_generator.py  config.py  processor.py  utils.py
backend/app/services/transcript_generator/: __init__.py  prompts.py  transcript_generator.py  validator.py
backend/app/services/voiceconfig_generator/: __init__.py  voiceconfig_generator.py
backend/generated_transcripts/: 1fa9fc64-5c7d-4c23-8129-a860b25ad8f6.txt  3f2c197f-5ba6-45ba-bf1a-06c460519584.txt  50d2dd3d-86a0-4c2d-b1d8-cb0f6e7a5559.txt  a3709f40-5b1f-4d84-8ba0-4348fbd45f58.txt  c9109a7f-35de-4ba5-83ad-3077f17be995.txt  e0281ac9-4bd4-4dbb-b2f6-e3d6ee908df8.txt  f2b4de68-71cb-493a-b7ab-00ff719a7536.txt
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html  manifest.json  robots.txt
frontend/src/: App.css  App.tsx  config.ts  index.css  index.tsx  react-app-env.d.ts
frontend/src/components/: AudioGenerationProgress.tsx  AudioGenerationSection.tsx  CharacterMapping.tsx  ConceptForm.tsx  CustomSelect.tsx  ProgressSteps.tsx  SpeakerConfigForm.tsx  TranscriptEditor.tsx  VoiceCard.tsx  (+2 more)
(+20 files in other folders)
