[tool.poetry]
name = "podcast-generator"
version = "0.1.0"
description = "AI Podcast Generator using Google's Gemini"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.0"
uvicorn = "^0.15.0"
pydantic = "^1.8.2"
google-cloud-aiplatform = "^1.0.0"
python-dotenv = "^0.19.0"
pydub = "^0.25.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.7b0"
isort = "^5.9.3" 